# PSX_Emulator

./: CMakeLists.txt  build.bat  build.sh
src/: main.cpp
src/CPU/: CPU.cpp  CPU.h  Memory.cpp  Memory.h
src/Core/: CDROM.cpp  CDROM.h  CPU.cpp  CPU.h  DMA.h  GPU.cpp  GPU.h  GTE.cpp  GTE.h  Interrupts.h  Memory.cpp  Memory.h  SPU.cpp  SPU.h
